# grepow

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/grepow/: __init__.py  cli.py
src/grepow/core/: __init__.py  git.py  repos.py
tests/: smoke_test.py
