[project]
name = "grepow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Louis Maddox", email = "louismmx@gmail.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
grepow = "grepow:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
