[project]
name = "grepow"
version = "0.1.0"
description = "CLI for sparse checkouts of results from grep.app repo search"
readme = "README.md"
authors = [
    { name = "Louis Maddox", email = "louismmx@gmail.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "httpx>=0.28.1",
    "tqdm>=4.67.2",
]

[project.scripts]
grepow = "grepow:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
